# copymatch

./: defaultConfig.json  pyproject.toml
src/copymatch/: __init__.py  copymatch.py  parsr.py
tests/: test_match.py
